--- a/index.html
+++ b/index.html
@@ -26,8 +26,8 @@
     </style>
 </head>
 <body>
-    <h1>Blolive</h1>
-    <canvas id="gameArea" width="800" height="600"></canvas>
+    <h1>Olive's Green Dot</h1>
+    <canvas id="gameArea" width="900" height="750"></canvas>
     <script src="index.js"></script>
 </body>
 </html>
