--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
     </style>
 </head>
 <body>
-    <h1>Olive's Green Dot</h1>
+    <h1>Olive's Rainbow Dot</h1>
     <canvas id="gameArea" width="900" height="750"></canvas>
     <script src="index.js"></script>
 </body>
